<resources>
    <string name="app_name">blablafit</string>
    <string name="btn_enviar">Guardar</string>
    <string name="input_password">Contraseña</string>
    <string name="mail">correo@correo.com</string>
    <string name="profile">Foto usuario</string>
    <string name="info_usuario">Nombre y Apellidos</string>
    <string name="kcal_act">0</string>
    <string name="kcal_objetivo">3499</string>
    <string name="separador">/</string>
    <string name="objetivo_usuario">Objetivo</string>
    <string name="add_buton">añadir</string>
    <string name="nuevo_objetivo">Nuevo objetivo</string>
    <string name="objetivo_null">Sin objetivo</string>
    <string name="altura">Altura (cm)</string>
    <string name="peso">Peso (Kg)</string>
    <string name="edad">Edad</string>
    <string name="input_mail">Correo electronico o usuario</string>
    <string name="recordar_password">Recordar contraseña</string>
    <string name="sin_cuenta">No tienes cuenta?Registrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario_o_correo">Usuario o correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="no_tienes_cuenta_registrate">No tienes cuenta?Registrate</string>
    <string name="has_olvidado_la_contrase_a_recuperar_contrase_a">Has olvidado la contraseña?\n\tRecuperar contraseña</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="ya_tienes_cuenta_inicia_sesion">Ya tienes cuenta?Inicia sesion</string>
    <string name="he_leido_y_acepto_las_politicas_de_uso">He leido y acepto las politicas de uso</string>
    <string name="blablafit">BlaBlaFit</string>
    <string name="correo">Correo</string>
    <string name="repetir_password">Repetir contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="proteinas">Proteinas</string>
    <string name="carbohidratos">Carbohidratos</string>
    <string name="grasas">Grasas</string>
    <string name="calorias">Calorias</string>
    <string name="perder_grasa_corporal">Perder grasa corporal</string>
    <string name="ganar_masa_muscular">Ganar masa muscular</string>
    <string name="rutina_para_6_dias">Rutina para 6 dias</string>
    <string name="rutina_para_3_dias">Rutina para 3 dias</string>
    <string name="rutina_para_4_dias">Rutina para 4 dias</string>
    <string name="rutina_para_5_dias">Rutina para 5 dias</string>
    <string name="entrenar_en_el_gimnasio">Entrenar en el gimnasio</string>
    <string name="entrenar_en_casa">Entrenar en casa</string>
    <string name="rutinas">Rutinas</string>
    <string name="alimentacio">Alimentacio</string>
    <string name="nuevo_password">Nueva contraseña</string>
    <string name="objetivo">Objetivo</string>
    <string name="fijar">Fijar</string>
    <string name="cantidad">Cantidad</string>
    <string name="seleccionar_alimento">Seleccionar alimento</string>
    <string name="todo">TODO</string>
    <string name="_250ml">250ml</string>
    <string name="guardar">Guardar</string>
    <string name="a_adir_alimento_por_qr">Añadir alimento por QR</string>
    <string name="dietas">Dietas</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="_0">0</string>
    <string name="control_semanal">Control semanal</string>
    <string name="_0kg">0kg</string>
    <string name="objetivo_menu">Objetivo</string>
    <string name="cerrar_sesion">cerrar Sesion</string>
    <string name="inicio">inicio</string>
    <string name="nombre">Nombre</string>
    <string name="datosFisicos">Datos Fisicos</string>
    <string name="cantidad_gramos">cantidad(gramos)</string>
    <string name="dia">Dia</string>

</resources>