<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recupera_Contrasenya"
    android:background="@color/blablafit">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="189dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/forma_circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reset_password"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="92dp"
        android:background="@drawable/borde_edit_text"
        android:gravity="center"
        android:hint="@string/input_mail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
         />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="168dp"
        android:background="@drawable/borde_boton"
        android:text="@string/btn_enviar"
        app:backgroundTint="@color/butoncolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/recordar_password"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:text="@string/sin_cuenta"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

</androidx.constraintlayout.widget.ConstraintLayout>