<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:background="#8DF766"
    tools:context=".MainActivityInicio">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mail"
        android:lines="1"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"


        android:hint="@string/correo"
        android:textColorHint="@color/colorFormulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.013"
        style="@style/custom_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:lines="1"
        style="@style/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_margin="30dp"
        android:layout_marginTop="100dp"
        android:hint="@string/nombre_usuario"

        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:lines="1"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="@color/colorFormulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repeat_password"
        android:paddingLeft="15dp"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:hint="@string/repetir_password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorFormulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/registrarme"
        app:backgroundTint="@color/colorBotones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/iniciar_sesion"
        android:layout_width="248dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/ya_tienes_cuenta_inicia_sesion"
        android:textColor="@color/colorTextosExternos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password"
        app:layout_constraintVertical_bias="0.079" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextosExternos"
        android:text="@string/he_leido_y_acepto_las_politicas_de_uso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion"
        app:layout_constraintVertical_bias="0.021" />


</androidx.constraintlayout.widget.ConstraintLayout>