<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rutinas2"
    android:background="#E1E1E1"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/dias_6"
            android:onClick="clicked"
            android:layout_width="376dp"
            android:layout_height="97dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/rutina_para_6_dias"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.817" />

        <Button
            android:id="@+id/dias_3"
            android:onClick="clicked"
            android:layout_width="376dp"
            android:layout_height="97dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/rutina_para_3_dias"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.192" />

        <Button
            android:id="@+id/dias_4"
            android:onClick="clicked"
            android:layout_width="376dp"
            android:layout_height="97dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/rutina_para_4_dias"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/dias_5"
            android:onClick="clicked"
            android:layout_width="376dp"
            android:layout_height="97dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/rutina_para_5_dias"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.611" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>